--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Cat Perry's Favorite Cats</title>
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Monoton"rel="styleshet">
   </head>
   <body>
     
